# job-scraper

./: .env.txt  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
configs/: sites.yml
configs/rules/: salary.yml  seniority.yml
core/: config.py  exceptions.py  helpers.py  models.py
examples/: logging_demo.py
extract/: __init__.py  example_site.py
extract/utils/: fetch.py  logger.py
job_scraper/: __init__.py  cli.py
tests/: test_config.py  test_helpers.py  test_logger.py  test_models.py
